--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     /* =========================================
        디자인(CSS)은 원본과 100% 동일합니다.
-       (반응형 관련 CSS만 맨 아래에 "추가"됨)
+       (맨 아래에 반응형/세로잘림 방지용 CSS만 "추가")
        ========================================= */
     body { background-color: #121212; color: white; font-family: 'Apple SD Gothic Neo', sans-serif; margin: 0; height: 100vh; display: flex; justify-content: center; align-items: center; overflow: hidden; }
     #landing-page { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); z-index: 2000; overflow-y: auto; transition: opacity 0.5s ease; display: flex; flex-direction: column; align-items: center; }
@@ -29,10 +29,8 @@
     .feature-title { font-size: 1.3rem; font-weight: bold; margin-bottom: 10px; color: #81d4fa; }
     .feature-desc { font-size: 0.95rem; color: #ccc; line-height: 1.6; }
     .footer { padding: 40px; text-align: center; font-size: 0.8rem; color: #666; background: rgba(0,0,0,0.3); width: 100%; box-sizing: border-box; }
-
     #app-container { display: none; width: 100%; height: 100%; justify-content: center; align-items: center; animation: fadeIn 1s ease; }
     .main-layout { display: flex; width: 95%; max-width: 1400px; height: 85vh; gap: 20px; transition: transform 0.3s ease; }
-
     .side-panel { flex: 1; background: rgba(255, 255, 255, 0.05); border-radius: 20px; padding: 20px; display: flex; flex-direction: column; border: 1px solid rgba(255, 255, 255, 0.1); }
     h3 { margin-top: 0; color: #aaa; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 1px; border-bottom: 1px solid #444; padding-bottom: 10px;}
     #analysis-log { flex: 1; overflow-y: auto; font-family: 'Courier New', monospace; font-size: 0.85rem; display: flex; flex-direction: column; gap: 8px; }
@@ -41,10 +39,12 @@
     .log-danger { border-left-color: #e74c3c; background: rgba(231, 76, 60, 0.1); color: #ffadad; font-weight: bold; }
     .log-safe { border-color: #2ecc71; color: #abebc6; }
     .log-send { border-left-color: #999; color: #bbb; background: rgba(255,255,255,0.05); }
-
     #transcript-box { flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 12px; }
     .transcript-bubble { background: #2c3e50; padding: 12px; border-radius: 12px; font-size: 1rem; line-height: 1.4; animation: fadeIn 0.3s; position: relative; transition: all 0.2s; }
-
+    .transcript-bubble.playable { cursor: pointer; border: 1px solid transparent; transition: background 0.2s, border-color 0.2s; }
+    .transcript-bubble.playable:hover { background: #34495e; border-color: #4facfe; }
+    .transcript-bubble.playable.playing { background: #1f4068; border-color: #00f2fe; box-shadow: 0 0 10px rgba(0, 242, 254, 0.3); }
+    .transcript-bubble.playable:hover::after { content: '▶ 재생'; position: absolute; top: 5px; right: 8px; background: rgba(79, 172, 254, 0.9); color: white; font-size: 0.7rem; padding: 3px 8px; border-radius: 10px; pointer-events: none; box-shadow: 0 2px 4px rgba(0,0,0,0.2); }
     .phone-frame { width: 360px; min-width: 360px; background: linear-gradient(180deg, #183340 0%, #0c1a20 100%); border-radius: 40px; border: 8px solid #000; box-shadow: 0 0 50px rgba(0,0,0,0.7); display: flex; flex-direction: column; position: relative; overflow: hidden; }
     .status-bar { padding: 20px 25px; font-size: 0.9rem; display: flex; justify-content: center; color: rgba(255,255,255,0.9); font-weight: 500; z-index: 10; height: 30px; }
     .status-bar.analyzing { color: #f1c40f; animation: blink 1s infinite; }
@@ -105,8 +105,7 @@
     ::-webkit-scrollbar-thumb { background: #444; border-radius: 3px; }
 
     /* =========================================
-       ✅ 반응형 추가 (잘림 방지 핵심)
-       - wrap + 작은 화면에서 세로 스택 + 스크롤 허용
+       ✅ 추가 1) 반응형 (가로 잘림 방지)
        ========================================= */
     .main-layout { flex-wrap: wrap; justify-content: center; align-content: flex-start; }
     .phone-frame { flex: 0 0 360px; }
@@ -125,7 +124,41 @@
       #menu-btn { right: 16px; }
       #back-btn { left: 16px; }
     }
-  </style>
+
+    /* =========================================
+       ✅ 추가 2) 세로 잘림 방지 (핵심)
+       ========================================= */
+    body{
+      overflow-y: auto;         /* 기존 overflow:hidden 덮어씀 */
+      height: auto;
+      min-height: 100vh;
+      align-items: flex-start;
+    }
+    #app-container{
+      height: auto;
+      min-height: 100vh;
+      align-items: flex-start;
+      padding: 18px 0;
+    }
+    .main-layout{
+      height: auto;             /* 기존 85vh 고정 덮어씀 */
+      min-height: 85vh;
+    }
+
+    @media (max-height: 820px){
+      .caller-info{ margin-top: 14px; height: 88px; }
+      .risk-gauge-wrapper{ width: 170px; height: 170px; margin: 6px auto 18px auto; }
+      .visualizer-area{ margin-bottom: 18px; }
+      .bottom-section{ padding-bottom: 18px; }
+    }
+    @media (max-height: 720px){
+      .caller-number{ font-size: 1.7rem; }
+      .caller-sub-number{ font-size: 1.0rem; }
+      .risk-percent{ font-size: 2.6rem; }
+      .status-bar{ padding: 16px 20px; }
+    }
+</style>
+
 </head>
 <body>
   <div id="landing-page">
