--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </div>
         </div>
       </div>
-      <div class="footer">© 2024 AI Phishing Detector Simulator. All rights reserved.</div>
+      <div class="footer">© 2026 AI Phishing Detector. All rights reserved.</div>
     </div>
   </div>
 
