--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>피싱 탐지 시뮬레이터 - On-Device AI</title>
+  <title>피슝: 피싱 탐지 - On-Device AI</title>
   <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
   <style>
     /* =========================================
